--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ main {
     margin-left: 0px;
 }
 
-.navigation-menu {
+nav {
     margin-left: 60px;
     margin-right: 60px;
     margin-top: 30px;
